# dakota-packages

./: .gitignore  muq-fix-dili.patch  muq-fix-osx.patch  muq-include-deque.patch  muq-no-apple-x86.patch  muq-remove_stan.patch  muq-skip_docs.patch  muq-skip_mkdirs.patch  muq-skip_tpl_checks.patch  muq-tpl-hints.patch  muq2-skipdocs.patch  muq2_install.sh  muq2_relax_boost_chk.patch  nowpac-DuplGPDataFile.patch  queso-mitigations.patch  trilinos-CompatConfigInclude.patch  trilinos-ProjectName.patch  trilinos-RolStdVectorIncludeNumerics.patch  trilinos-TeuchosObjectInheritance.patch  trilinos-TeuchosSerialDenseMatrix.patch  trilinos-TeuchosSerialDense_with_stdswap.patch  trilinos-TeuchosSerialSymDenseMatrix-2.patch  trilinos-TeuchosSerialSymDenseMatrix.patch  trilinos-TriBITSFixPermsScript.patch
C3/: CMakeLists.txt
C3/src/lib_superlearn/: regress.c
CONMIN/: CMakeLists.txt
DDACE/: CMakeLists.txt
DDACE/src/Analyzer/: MainEffectsExcelOutput.cpp
DDACE/src/Bose/: boselink.c
FSUDace/: CMakeLists.txt  fsu_cvt.C
JEGA/: CMakeLists.txt  Dakota_svninfo
JEGA/MOGA/: CMakeLists.txt
JEGA/MOGA/src/: MOGA.cpp
JEGA/SOGA/src/: SOGA.cpp
JEGA/Utilities/include/: Design.hpp  DesignMultiSet.hpp  DesignStatistician.hpp  DiscreteDesignVariableNature.hpp  JEGAConfig.hpp  LRUDesignCache.hpp  MessageBoard.hpp  MultiObjectiveStatistician.hpp  UnconstrainedStatistician.hpp
JEGA/Utilities/src/: BasicParameterDatabaseImpl.cpp  ContinuumDesignVariableNature.cpp  Design.cpp  DesignStatistician.cpp  DesignTarget.cpp  DiscreteDesignVariableNature.cpp  IntegerDesignVariableType.cpp  LRUDesignCache.cpp  MultiObjectiveStatistician.cpp  RegionOfSpace.cpp
JEGA/include/: GeneticAlgorithm.hpp  GeneticAlgorithmMutator.hpp  GeneticAlgorithmNichePressureApplicator.hpp
JEGA/include/Convergers/: MetricTrackerConvergerBase.hpp
JEGA/include/Evaluators/: SimpleFunctorEvaluator.hpp
JEGA/include/Mutators/: LocalDesignVariableMutator.hpp
JEGA/include/inline/: GeneticAlgorithm.hpp.inl
JEGA/src/: BitManipulator.cpp  CMakeLists.txt  GeneticAlgorithm.cpp  GeneticAlgorithmMutator.cpp  GeneticAlgorithmOperatorSet.cpp
JEGA/src/Convergers/: MetricTrackerConvergerBase.cpp
JEGA/src/Evaluators/: SimpleFunctorEvaluator.cpp
JEGA/src/Initializers/: FlatFileInitializer.cpp
JEGA/src/Mutators/: LocalDesignVariableMutator.cpp
JEGA/src/Selectors/: BelowLimitSelector.cpp  NonDuplicatingRouletteWheelSelector.cpp  RouletteWheelSelector.cpp
LHS/: CMakeLists.txt  C_wrap.f90  Lhs_run.f90
NCSUOpt/: CMakeLists.txt  DIRect.f
NL2SOL/: CMakeLists.txt
NOMAD/: CMakeLists.txt
NOMAD/src/: CMakeLists.txt  makefile
OPTPP/: CMakeLists.txt
OPTPP/include/: Opt.h
OPTPP/src/Base/: NLP0.C
OPTPP/src/PDS/: pdsdone.c
PSUADE/: CMakeLists.txt  DakotaPsuade.C  DakotaPsuade.H  MOATSampling.cpp
VPISparseGrid/: CMakeLists.txt
acro/: Dakota_svninfo
acro/admin/: setup.py
acro/bootstrap/root/: CMakeLists.txt
acro/tpl/: Dakota_externals
acro/tpl/vpykit/: Dakota_externals
ampl/: CMakeLists.txt
ann/src/: CMakeLists.txt
approxnn/include/ANN/: ANN.h
approxnn/src/: CMakeLists.txt  kd_dump.cpp
demo_tpl/: CMakeLists.txt  README.md  README.txt
demo_tpl/dakota_src/: DemoOptimizer.cpp  DemoOptimizer.hpp
demo_tpl/src/: CMakeLists.txt  demo_opt.cpp  demo_opt.hpp  execute.cpp  execute.hpp  initialize.cpp  initialize.hpp  main.cpp
dfftpack/: CMakeLists.txt
dream/: CMakeLists.txt  dream.cpp  dream.hpp
eigen3/share/pkgconfig/: eigen3.pc
hopspack/: CMakeLists.txt
hopspack/examples/: CMakeLists.txt
hopspack/examples/1-var-bnds-only/: CMakeLists.txt
hopspack/examples/2-linear-constraints/: CMakeLists.txt
hopspack/examples/3-degen-linear-constraints/: CMakeLists.txt
hopspack/examples/4-nonlinear-constraints/: CMakeLists.txt
hopspack/examples/5-multi-start/: CMakeLists.txt
hopspack/src/: CMakeLists.txt
hopspack/src/src-citizens/: CMakeLists.txt
hopspack/test/lapack-tests/: CMakeLists.txt
hopspack/test/penalty-tests/: CMakeLists.txt
hopspack/test/startpoint-tests/: CMakeLists.txt
muq2/: CMakeLists.txt  LICENSE  VERSION.dakota
muq2/MUQ/Approximation/: ForwardUQ.h
muq2/MUQ/Modeling/: LinearSDE.h  ModGraphPiece.h  ModPiece.h  Modeling.h  ODE.h  SplitVector.h  WorkGraphPiece.h  WorkPiece.h
muq2/MUQ/Optimization/: CostFunction.h  ModPieceCostFunction.h  NLoptOptimizer.h  NewtonTrust.h  Optimizer.h
muq2/MUQ/SamplingAlgorithms/: AbstractSamplingProblem.h  DILIKernel.h  DRKernel.h  DefaultComponentFactory.h  Diagnostics.h  ExpensiveSamplingProblem.h  GreedyMLMCMC.h  IndependenceProposal.h  InfMALAProposal.h  InferenceProblem.h  InverseGammaProposal.h  MCMCFactory.h  MCMCProposal.h  MHKernel.h  MIComponentFactory.h  MIMCMC.h  MIMCMCBox.h  MarkovChain.h  MultiIndexEstimator.h  ParallelAbstractSamplingProblem.h  ParallelFixedSamplesMIMCMC.h  ParallelFlags.h  ParallelMIComponentFactory.h  ParallelMIMCMCBox.h  ParallelMIMCMCWorker.h  ParallelTempering.h  ParallelizableMIComponentFactory.h  Phonebook.h  RemoteMIProposal.h  SLMCMC.h  SampleCollection.h  SampleEstimator.h  Sampling.h  SamplingAlgorithm.h  SamplingProblem.h  SamplingState.h  (+4 more)
muq2/cmake/: ExternalOptions.cmake  MUQConfig.cmake.in  ProcessCompileGroups.cmake  SetInstallPaths.cmake  SetupCompileTargets.cmake  SetupCompiler.cmake  UpdateCompileGroups.cmake
nidr/: CMakeLists.txt  nidr-scanner.c  nidr.c  nidrgen.c  nidrgen.l
nowpac/: VERSION.dakota
nowpac/include/: NOWPAC.hpp  SubproblemOptimization.hpp
pybind11/: VERSION.dakota
queso/: CMakeLists.txt  VERSION  config_queso.h.cmake.in
queso/src/contrib/ANN/src/: kd_dump.cpp
queso/src/core/inc/: Environment.h
queso/src/core/src/: Environment.C
queso/src/gp/src/: GPMSAOptions.C
queso/src/misc/src/: 1DQuadrature.C  MonteCarloQuadrature.C  TensorProductQuadrature.C
queso/src/stats/inc/: MetropolisHastingsSGOptions.h
queso/src/stats/src/: MetropolisHastingsSG.C  MetropolisHastingsSGOptions.C
sciplot/: CMakeLists.txt  SciPlot.c
snowpac/: VERSION.dakota
snowpac/include/: SubproblemOptimization.hpp
trilinos/: CMakeLists.txt  TrilinosRepoVersion.txt  VERSION
(+230 files in other folders)
